@@ -11,6 +11,7 @@ fi
 AC_SUBST(LD)
 
 CFLAGS="-Wall -W -g -O2"
+CPPFLAGS="$(CPPFLAGS) -D_FILE_OFFSET_BITS=64"
 
 AC_ARG_ENABLE(kernel-module,
 	[  --enable-kernel-module  Compile kernel module, requires --with-kernel option ])
