@@ -1,3 +1,11 @@
+2004-04-13  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Replaced binary mount data with text options
+
+	* Show FUSE specific mount options in /proc/mounts
+
+	* Check in fuse.h whether _FILE_OFFSET_BITS is set to 64
+
 2004-04-09  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Check some limits so userspace won't get too big requests
